[package]
name = "test-iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3.0", features = ["canvas", "debug"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = [
    "split",
] }
